--- a/Experiments/React/react-sandbox/src/styles/main.sass
+++ b/Experiments/React/react-sandbox/src/styles/main.sass
@@ -16,9 +16,7 @@ h1,h2,h3,h4,h5,h6,p
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-
 ////////////////////////
-
 
 .sectionReactMemo
   height: 100vh
@@ -32,10 +30,8 @@ h1,h2,h3,h4,h5,h6,p
     font-size: 20px
     margin: 0 0 1rem 0
 
-
 ////////////////////////
 
-  
 .sectionComposition
   display: flex
   flex-direction: column
@@ -48,13 +44,13 @@ h1,h2,h3,h4,h5,h6,p
   header
     padding: 10px 30px
     background-color: black
-  
+
   main
     flex: 1
     display: flex
     flex-direction: column
     padding: 60px 30px
-  
+
   footer
     padding: 10px 30px
     background-color: black
@@ -69,3 +65,12 @@ h1,h2,h3,h4,h5,h6,p
 
   button
     background-color: #2aedd2
+
+////////////////////////
+
+.sectionFetchPokies
+  height: 100vh
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
