The numbers in the data are correct but aren't being plotted on the chart correctly...

--- a/Experiments/React/react-sandbox/src/styles/main-corona.sass
+++ b/Experiments/React/react-sandbox/src/styles/main-corona.sass
@@ -12,7 +12,7 @@ body
   height: 100vh
   margin: 0
   background-color: $dark2
-  color: #120544
+  color: white
 
 h1,h2,h3,h4,h5,h6,p,span
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", sans-serif
@@ -38,7 +38,7 @@ h1,h2,h3,h4,h5,h6,p,span
   select
     margin-bottom: 20px
 
-.card
+.frame
   padding: 30px
   background-color: $dark1
   margin: 0
