--- a/Experiments/React/react-sandbox/src/styles/main-corona.sass
+++ b/Experiments/React/react-sandbox/src/styles/main-corona.sass
@@ -1,6 +1,11 @@
-$dark1: hsl(207, 24%, 7%)
-$dark2: hsl(207, 28%, 8%)
-$text1: hsl(210, 15%, 61%)
+$dark1: hsl(210, 20%, 0%)
+$dark2: hsl(210, 20%, 7%)
+$dark3: hsl(210, 20%, 9%)
+$dark4: hsl(210, 20%, 11%)
+$dark4: hsl(210, 20%, 17%)
+$text1: hsl(210, 15%, 60%)
+$text2: hsl(210, 15%, 85%)
+$primary1: hsl(230, 65%, 65%)
 
 html
   box-sizing: border-box
@@ -11,7 +16,7 @@ html
 body
   height: 100vh
   margin: 0
-  background-color: $dark2
+  background-color: $dark3
   color: white
 
 h1,h2,h3,h4,h5,h6,p,span
@@ -23,30 +28,53 @@ h1,h2,h3,h4,h5,h6,p,span
 
 .sectionCoronavirus
   display: flex
-  align-items: center
-  justify-content: center
   height: 100vh
+
+.containerLeft
+  flex: 1
+  display: flex
+  flex-direction: column
+  // justify-content: center
+  align-items: center
   padding: 30px
+  min-width: 400px
 
-  h1
-    font-size: 42px
+  input
+    margin-bottom: 10px
+    width: 100%
+    height: 50px
+    padding: 14px
+    border-radius: 3px
+    border: 1px solid $dark1
+    background-color: $dark4
+    color: $text2
+    font-size: 14px
 
-  h2
-    font-size: 28px
-    margin-top: 60px
+    &:hover, &:focus
+      border-color: $primary1
+    &:focus
+      outline: none
+      box-shadow: 0 0 0 7px transparentize($primary1, 0.8)
+    &::placeholder
+      color: $text1
 
-  select
-    margin-bottom: 20px
+.containerRight
+  flex: 3
+  display: flex
+  justify-content: center
+  align-items: center
 
 .frame
   padding: 30px
   background-color: $dark1
   margin: 0
+  height: 100%
+  max-width: 100%
 
   &__deathsOverTime
-    height: 600px
+    height: 100%
     width: 100%
-    max-width: 1000px
+    // max-width: 1000px
 
   &__global-stats
     display: flex
