--- a/Experiments/React/react-sandbox/src/styles/main-corona.sass
+++ b/Experiments/React/react-sandbox/src/styles/main-corona.sass
@@ -5,7 +5,7 @@ $dark4: hsl(210, 20%, 11%)
 $dark4: hsl(210, 20%, 17%)
 $text1: hsl(210, 15%, 60%)
 $text2: hsl(210, 15%, 85%)
-$primary1: hsl(230, 65%, 65%)
+$primary1: hsl(30, 65%, 65%)
 
 html
   box-sizing: border-box
@@ -49,6 +49,7 @@ h1,h2,h3,h4,h5,h6,p,span
     background-color: $dark4
     color: $text2
     font-size: 14px
+    transition: 150ms ease-in-out
 
     &:hover, &:focus
       border-color: $primary1
