Countries can now be removed

--- a/Experiments/React/hackdays-april-2020/src/index.css
+++ b/Experiments/React/hackdays-april-2020/src/index.css
@@ -13,7 +13,7 @@ body {
   font-family: 'IBM Plex Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1E213A;
+  background-color: #100E1D;
 }
 
 code {
