--- a/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/styles.css
+++ b/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/styles.css
@@ -1,3 +1,15 @@
+/* normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}details,main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none}
+
+html {
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
+  box-sizing: border-box;
+  font-size: 10px;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   min-height: 100vh;
   display: grid;
@@ -5,10 +17,19 @@ body {
   background-color: rgb(187, 221, 218);
 }
 
+h1 {
+  margin: 20px 0;
+  color: rgb(255, 236, 125);
+  font-family: 'Limelight', cursive;
+  font-size: 3.5rem;
+  text-shadow: 2px 2px 0 rgba(0,0,0,0.25);
+  text-align: center;
+}
+
 #etch-a-sketch {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 0 40px;
   background-color: #e80000;
   border: 10px solid #ce0000;
   border-top: 10px solid #ff4242;
@@ -17,11 +38,14 @@ body {
 }
 
 #canvas {
-  border-radius: 12px;
+  border-radius: 15px;
   /* Set the width and height to half the actual size so it doesn't look pixelated */
   width: 600px;
   height: 400px;
   background: white;
+  border: 4px solid #ce0000;
+  border-bottom: 4px solid #ff4242;
+  border-right: 4px solid #ff4242;
 }
 
 #etch-a-sketch.shake {
@@ -53,14 +77,27 @@ body {
 }
 
 .buttons {
+  margin: 24px 0;
   display: flex;
   justify-content: space-evenly;
 }
 
 button {
-  margin-top: 20px;
-  padding: 10px 30px;
+  padding: 8px 20px;
   background-color: white;
-  border-radius: 10px;
-  color: gray;
+  border: 0;
+  border-radius: 4px;
+  box-shadow: 2px 2px 0px rgba(0,0,0,0.25);
+  color: rgb(107, 107, 107);
+  cursor: pointer;
+  font-size: 1.8rem;
+  transition: 50ms ease-in-out;
+}
+
+button:focus {
+  outline: none;
+}
+button:active {
+  box-shadow: 0px 0px 0px rgba(0,0,0,0.25);
+  transform: translate3d(1px, 1px, 0);
 }
