--- a/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/styles.css
+++ b/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/styles.css
@@ -27,6 +27,7 @@ body {
   transform: translate3d(-50%, -80px, 0);
   color: rgb(73, 112, 85);
   font-size: 1.6rem;
+  font-weight: bold;
   transition: 600ms cubic-bezier(0.5,-0.2,.45,.95);
   margin: 0;
   opacity: 0;
@@ -80,6 +81,12 @@ h1 {
   border: 4px solid #ce0000;
   border-bottom: 4px solid #ff4242;
   border-right: 4px solid #ff4242;
+  box-shadow: inset 0 0 50px hsla(0, 0%, 0%, 0.3);
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 button {
