--- a/Courses/Wes Bos/css-grid/assets/style.css
+++ b/Courses/Wes Bos/css-grid/assets/style.css
@@ -1,3 +1,10 @@
+/*
+  Oh Hello!
+
+  These are some base styles so that our tutorial looks good.
+
+  Let's go through the important bits real quick
+*/
 :root {
   --yellow: #ffc600;
   --black: #272727;
@@ -50,7 +57,7 @@ h6 {
   border: 3px solid hsla(0, 0%, 100%, 0.1);
   border-radius: 3px;
   font-size: 35px;
-  background-color: hsla(0, 0%, 100%, 0.2); /* best colour */
+  background-color: hsla(0, 0%, 100%, 0.2);
 }
 
 .item p {
