--- a/Courses/Wes Bos/css-grid/assets/style.css
+++ b/Courses/Wes Bos/css-grid/assets/style.css
@@ -16,10 +16,11 @@ html {
   /* A system font stack so things load nice and quick! */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-weight: 900;
   font-size: 10px;
   color: white;
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /*
@@ -37,7 +38,7 @@ body {
   background-image: linear-gradient(150deg, #669cff, #6f00ff);
   margin: 50px;
   background-attachment: fixed;
-  letter-spacing: -1px;
+  font-size: 1.6rem;
 }
 
 h1,
@@ -46,8 +47,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 5px 0;
+  font-weight: 800;
+  margin: 0;
 }
+
+p {
+  margin: 0;
+}
+
 /* Each item in our grid will contain numbers */
 .item {
   /* We center the contents of these items. You can also do this with flexbox too! */
