--- a/Experiments/React/matching-game/src/styles/main.sass
+++ b/Experiments/React/matching-game/src/styles/main.sass
@@ -43,20 +43,42 @@ h3
   min-height: 100vh
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr))
-  grid-template-rows: repeat(auto-fit, 30vh)
+  grid-template-rows: repeat(auto-fill, 220px)
+  align-items: center
+  justify-items: center
   grid-gap: 1.4vw
+  perspective: 1000px
 
 .card
-  display: grid
-  place-items: center
-  background-color: white
-  border-radius: 15px
-  box-shadow: 0 3px 6px hsla(220, 30%, 20%, 0.2)
+  position: relative
+  width: 100%
+  height: 100%
+  max-width: 180px
+  max-height: 180px
   cursor: pointer
-  transition: all 150ms ease-in-out
+  transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
+  transform-style: preserve-3d
 
-  &:hover
-    transform: scale(1.04)
+  &__flipped
+    transform: rotate3d(0.05,1,0,180deg)
+
+  .side
+    position: absolute
+    width: 100%
+    height: 100%
+    display: grid
+    place-items: center
+    background-color: white
+    border-radius: 8px
+    box-shadow: 0 3px 6px hsla(220, 30%, 20%, 0.2)
+    backface-visibility: hidden
+    pointer-events: none
+
+    &__front
+      transform: rotateY(180deg)
+
+    &__back
+      z-index: 2
 
   img
-    width: 60%
+    width: 80%
