--- a/Experiments/React/matching-game/src/styles/main.sass
+++ b/Experiments/React/matching-game/src/styles/main.sass
@@ -36,7 +36,7 @@ header
   left: 0
   right: 0
   z-index: 10
-  backdrop-filter: blur(15px)
+  backdrop-filter: blur(10px)
   box-shadow: 0 4px 30px hsla(210, 15%, 0%, 0.1)
   display: flex
   align-items: center
@@ -70,8 +70,8 @@ header
     letter-spacing: 0.03em
   
 main
-  padding: 126px 30px
-  min-height: 100vh
+  padding: 126px 30px 0
+  min-height: 80vh
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr))
   grid-template-rows: repeat(auto-fill, 220px)
