--- a/Experiments/React/matching-birds/src/styles/setup-modal.sass
+++ b/Experiments/React/matching-birds/src/styles/setup-modal.sass
@@ -1,5 +1,7 @@
 .setup-modal-container
   position: fixed
+  top: 0
+  left: 0
   width: 100%
   height: 100%
   display: grid
@@ -16,10 +18,15 @@
 
   select
     flex: 1
-    padding: 16px;
-    appearance: none;
+    padding: 16px
+    appearance: none
     border-radius: 4px
-    border: 1px solid lightgray;
+    border: 2px solid hsla(170, 100%, 60%, 1)
     cursor: pointer
     color: var(--text-primary)
     font-size: 16px
+    outline: none
+    transition: all 300ms var(--ease-out-back)
+
+    &:focus
+      box-shadow: 0 0 0 7px hsla(160, 100%, 50%, 0.3)
