--- a/Experiments/React/matching-birds/src/styles/main.sass
+++ b/Experiments/React/matching-birds/src/styles/main.sass
@@ -5,6 +5,9 @@
   --text-primary: hsl(210, 20%, 11%)
   --text-inactive: hsl(210, 20%, 60%)
 
+  --input-border: 2px solid hsla(170, 100%, 60%, 1)
+  --input-shadows: 0 0 0 7px hsla(160, 100%, 50%, 0.3)
+
   --ease-out-quart: cubic-bezier(0.165, 0.85, 0.45, 1)
   --ease-out-back: cubic-bezier(0.175, 0.885, 0.32, 1.275)
   --ease-out-back-Lg: cubic-bezier(0.17, 0.9, 0.46, 1.70)
@@ -24,6 +27,7 @@ html
 body
   margin: 0
   padding: 0
+  background-color: var(--off-white)
 
 h1,h2,h3,h4,h5,h6,p
   margin: 0
@@ -40,7 +44,6 @@ h3
 #app-wrap
   display: flex
   justify-content: center
-  background-color: var(--off-white)
 
 .wrap
   position: relative
