--- a/Experiments/React/matching-birds/src/styles/setup-modal.sass
+++ b/Experiments/React/matching-birds/src/styles/setup-modal.sass
@@ -9,24 +9,83 @@
 
 .setup-modal
   display: flex
+  flex-direction: column
   width: 100%
   max-width: 340px
   padding: 25px
   border-radius: 10px
   background-color: white
   box-shadow: 0 8px 30px -4px hsla(250, 100%, 10%, 0.25)
+  
+  & > * + *
+    margin-top: 16px
 
-  select
-    flex: 1
-    padding: 16px
+  .select-container
+    position: relative
+  
+  input, select
     appearance: none
+    padding: 16px
     border-radius: 4px
-    border: 2px solid hsla(170, 100%, 60%, 1)
+    border: var(--input-border)
     cursor: pointer
     color: var(--text-primary)
     font-size: 16px
     outline: none
     transition: all 300ms var(--ease-out-back)
 
+    &::-webkit-input-placeholder
+      color: var(--text-inactive)
+    &::-moz-placeholder
+      color: var(--text-inactive)
+
     &:focus
-      box-shadow: 0 0 0 7px hsla(160, 100%, 50%, 0.3)
+      box-shadow: var(--input-shadows)
+
+  select
+    width: 100%
+  
+  .arrow-down
+    position: absolute
+    top: 50%
+    right: 5px
+    transform: translateY(-50%)
+    fill: var(--text-inactive)
+    pointer-events: none
+
+  .plus-button
+    display: grid
+    place-items: center
+    width: 40px
+    height: 40px
+    border-radius: 100px
+    border: var(--input-border)
+    background-color: hsla(190, 25%, 100%, 1)
+    cursor: pointer
+    outline: none
+    transition: all 300ms var(--ease-out-back)
+
+    &:focus
+      box-shadow: var(--input-shadows)
+    &:hover
+      transform: rotate(180deg)
+
+    .icon-plus
+      fill: var(--text-primary)
+
+  .play-button
+    padding: 16px
+    border-radius: 4px
+    border: none
+    background-color: #23c4ff
+    background-image: linear-gradient(20deg, #23c4ff 0%, #49ffad 100%)
+    cursor: pointer
+    color: white
+    font-size: 16px
+    font-weight: bold
+    text-shadow: 0 0 5px hsla(160, 100%, 35%, 1)
+    outline: none
+    transition: all 300ms var(--ease-out-back)
+
+    &:focus
+      box-shadow: var(--input-shadows)
