--- a/Experiments/React/matching-birds/src/styles/setup-modal.sass
+++ b/Experiments/React/matching-birds/src/styles/setup-modal.sass
@@ -16,6 +16,13 @@
   border-radius: 10px
   background-color: white
   box-shadow: 0 8px 30px -4px hsla(250, 100%, 10%, 0.25)
+  opacity: 0
+  animation-delay: 300ms
+  animation-duration: 1500ms
+  animation-fill-mode: forwards
+  animation-iteration-count: 1
+  animation-timing-function: var(--ease-out-quart)
+  animation-name: modal-animate-in
   
   & > * + *
     margin-top: 16px
@@ -78,14 +85,26 @@
     border-radius: 4px
     border: none
     background-color: #23c4ff
-    background-image: linear-gradient(20deg, #23c4ff 0%, #49ffad 100%)
+    background-image: linear-gradient(90deg, #49ffad 0%, #23c4ff 50%, #49ffad 100%)
+    background-size: 260% auto
     cursor: pointer
     color: white
     font-size: 16px
     font-weight: bold
     text-shadow: 0 0 5px hsla(160, 100%, 35%, 1)
     outline: none
-    transition: all 300ms var(--ease-out-back)
+    transition: all 300ms var(--ease-out-quart)
 
     &:focus
       box-shadow: var(--input-shadows)
+    &:hover, &:focus
+      background-position: right center
+
+
+@keyframes modal-animate-in
+  0%
+    opacity: 0
+    transform: translateY(-10px)
+  100%
+    opacity: 1
+    transform: translateY(0px)
