Adjust grid width based on card count

--- a/Experiments/React/matching-birds/src/styles/main.sass
+++ b/Experiments/React/matching-birds/src/styles/main.sass
@@ -30,7 +30,7 @@ h3
 .wrap
   position: relative
   width: 100%
-  max-width: 1200px
+  max-width: var(--wrap__max-width)
 
 header
   position: fixed
