--- a/Experiments/React/matching-birds/src/styles/custom-properties.sass
+++ b/Experiments/React/matching-birds/src/styles/custom-properties.sass
@@ -1,5 +1,3 @@
-// Custom properties
-////////////////////////
 \:root
   --off-white: hsl(210, 15%, 85%)
   --text-primary: hsl(210, 20%, 11%)
@@ -13,6 +11,5 @@
   --ease-out-back: cubic-bezier(0.175, 0.885, 0.32, 1.275)
   --ease-out-back-lg: cubic-bezier(0.17, 0.9, 0.46, 1.70)
 
-  --column-cell-count: 0
-  --row-cell-count: 0
+  --wrap__max-width: 1200px
   --grid-cell-size: 180
