--- a/Experiments/React/matching-birds/src/styles/main.sass
+++ b/Experiments/React/matching-birds/src/styles/main.sass
@@ -43,3 +43,25 @@ main
   grid-gap: 2vw
   perspective: 1000px
 
+.button
+  border-radius: 4px
+  border: none
+  cursor: pointer
+  outline: none
+  transition: all 300ms var(--ease-out-quart)
+
+  &:focus
+    box-shadow: var(--input-shadows)
+
+  &__primary
+    padding: 16px
+    background-color: #23c4ff
+    background-image: linear-gradient(90deg, #49ffad 0%, #23c4ff 50%, #49ffad 100%)
+    background-size: 260% auto
+    color: white
+    font-size: 16px
+    font-weight: bold
+    text-shadow: 0 0 5px hsla(160, 100%, 35%, 1)
+
+    &:hover, &:focus
+      background-position: right center
