--- a/Experiments/React/matching-birds/src/styles/setup-modal.sass
+++ b/Experiments/React/matching-birds/src/styles/setup-modal.sass
@@ -1,4 +1,4 @@
-.setup-modal-bg
+.modal-bg
   position: fixed
   top: 0
   left: 0
@@ -114,26 +114,6 @@
 
     .icon-plus
       fill: var(--text-primary)
-
-  .play-button
-    padding: 16px
-    border-radius: 4px
-    border: none
-    background-color: #23c4ff
-    background-image: linear-gradient(90deg, #49ffad 0%, #23c4ff 50%, #49ffad 100%)
-    background-size: 260% auto
-    cursor: pointer
-    color: white
-    font-size: 16px
-    font-weight: bold
-    text-shadow: 0 0 5px hsla(160, 100%, 35%, 1)
-    outline: none
-    transition: all 300ms var(--ease-out-quart)
-
-    &:focus
-      box-shadow: var(--input-shadows)
-    &:hover, &:focus
-      background-position: right center
 
 
 @keyframes setup-modal-container-animate-in
