--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_01/styles.css
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_01/styles.css
@@ -1,4 +1,7 @@
+html { box-sizing: border-box; }
+
 *, *::before, *::after {
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
@@ -13,6 +16,7 @@ h3,
 p,
 span {
   font-family: 'Exo 2', sans-serif;
+  font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -24,12 +28,11 @@ h1 {
 
 h2 {
   font-size: 44px;
-  font-weight: 300;
 }
 
 p {
   font-size: 18px;
-  line-height: 1.8rem;
+  line-height: 1.9rem;
 }
 
 .interstellar-colonies-title {
@@ -40,6 +43,7 @@ p {
 
 .font-mono {
   font-family: 'IBM Plex Mono', monospace;
+  font-size: 14px;
 }
 
 /* =========== */
@@ -47,49 +51,80 @@ p {
 /* =========== */
 
 body {
-  display: grid;
-  grid-template-columns: 80px 1fr;
+  padding-left: 80px;
 }
 
 nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 80px;
+  height: 100vh;
+  padding: 30px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   border-right: 1px solid #ddd;
   writing-mode: vertical-rl;
 }
 
 .container__primary-content {
-  display: flex;
-  flex-direction: column;
-  padding: 110px 60px;
+  width: min(1320px, 100%);
+  margin: 0 auto;
+  padding: 110px max(4vw, 20px);
 }
 
 header {
   margin-bottom: 240px;
 }
 
-main {
-  display: grid;
-  /* grid-template-columns: repeat(2, 1fr);
-  grid-auto-flow: dense; */
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-auto-rows: minmax(100px, 1fr);
-  grid-auto-flow: dense;
-  gap: 50px;
-  /* grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); */
-  /* grid-auto-flow: column; */
-  /* grid-auto-columns: minmax(300px, 600px); */
-  /* grid-auto-columns: repeat(auto-fill, minmax(100px, 600px)); */
+.uic-container {
+  display: flex;
+  align-items: center;
 }
 
-/* article {
-  width: 100%;
-} */
+.red-star {
+  margin: 0 10px;
+  width: 24px;
+  height: auto;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  gap: 90px 50px;
+}
+
+.date-and-image-container {
+  display: flex;
+  margin-bottom: 24px;
+}
+
+.image-container {
+  flex: 1;
+}
 
 img {
+  display: block;
   width: 100%;
   height: auto;
   border-radius: 20px;
 }
 
+.date {
+  align-self: flex-end;
+  margin-left: 6px;
+  writing-mode: vertical-rl;
+}
+
+.text-container {
+  padding-right: 30px;
+}
+
+.text-container > * + * {
+  margin-top: 10px;
+}
 
 /* #container {
   width: 100vw;
