WebGL and HTML in sync

--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_03/styles.css
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_03/styles.css
@@ -51,19 +51,17 @@ p {
 /* Main layout */
 /* =========== */
 
-body {
-  padding-left: 80px;
-}
-
 nav {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
   width: 80px;
   height: 100vh;
   display: flex;
   flex-direction: column;
   border-right: 1px solid #ddd;
+  background-color: white;
 }
 
 .container_nav-start {
@@ -118,6 +116,10 @@ nav {
 }
 
 /*  */
+
+main {
+  padding-left: 80px;
+}
 
 .wrap {
   width: min(1320px, 100%);
