Setting up a raycaster

--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects/styles.css
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects/styles.css
@@ -52,18 +52,20 @@ p {
 /* =========== */
 
 body {
-  padding-left: 80px;
+  overscroll-behavior: none;
 }
 
 nav {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
   width: 80px;
   height: 100vh;
   display: flex;
   flex-direction: column;
   border-right: 1px solid #ddd;
+  background-color: white;
 }
 
 .container_nav-start {
@@ -117,6 +119,12 @@ nav {
   height: 18px;
 }
 
+/*  */
+
+main {
+  padding-left: 80px;
+}
+
 .wrap {
   width: min(1320px, 100%);
   margin: 0 auto;
@@ -138,7 +146,7 @@ header {
   height: auto;
 }
 
-main {
+.container_articles {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   gap: 90px 50px;
@@ -153,11 +161,12 @@ main {
   flex: 1;
 }
 
-img {
+.article-image {
   display: block;
   width: 100%;
   height: auto;
   border-radius: 20px;
+  opacity: 0;
 }
 
 .date {
@@ -178,7 +187,7 @@ img {
 /* WebGL Container */
 /* =============== */
 
-#webgl-container {
+#container_webgl {
   position: fixed;
   top: 0;
   left: 0;
@@ -187,6 +196,6 @@ img {
   height: 100vh;
 }
 
-#webgl-container canvas {
+#container_webgl canvas {
   display: block;
 }
