Added up and down

--- a/Experiments/Remix/my-second-remix-app/app/styles/zac.css
+++ b/Experiments/Remix/my-second-remix-app/app/styles/zac.css
@@ -15,5 +15,5 @@ button {
 }
 
 img {
-  transform: translateX(var(--img-pos-x));
+  transform: translate3d(var(--img-pos-x), var(--img-pos-y), 0);
 }
