--- a/Experiments/Remix/jokes-tutorial/app/styles/global.css
+++ b/Experiments/Remix/jokes-tutorial/app/styles/global.css
@@ -26,17 +26,9 @@ html {
   outline: auto;
 }
 
-a:focus {
-  border-radius: 1px;
-  outline: hsla(250, 100%, 55%, 1) solid 3px;
-  outline-offset: 4px;
-}
-input:focus {
-  outline: hsla(250, 100%, 55%, 1) solid 5px;
-}
-button:focus {
-  outline: none;
-  background-color: hsl(250, 100%, 45%);
+:focus {
+  outline: var(--color-links) solid 2px;
+  outline-offset: 2px;
 }
 
 html,
