--- a/Experiments/Ruby/rails-projects/todo-app/app/views/todo_lists/_todo_list.html.erb
+++ b/Experiments/Ruby/rails-projects/todo-app/app/views/todo_lists/_todo_list.html.erb
@@ -1,7 +1,3 @@
-<div id="<%= dom_id todo_list %>">
-  <p>
-    <strong>Title:</strong>
-    <%= todo_list.title %>
-  </p>
-
-</div>
+<li class="todo-list-item" id="<%= dom_id todo_list %>">
+  <%= link_to todo_list.title, todo_list %>
+</li>
