--- a/Experiments/Ruby/rails-projects/todo-app/app/views/todo_items/index.html.erb
+++ b/Experiments/Ruby/rails-projects/todo-app/app/views/todo_items/index.html.erb
@@ -12,6 +12,8 @@
   </tr>
 
 <% @todo_items.each do |todo_item| %>
+<%= [todo_item.todo_list, todo_item] %>
+<hr>
   <tr>
     <td><%= todo_item.description %></td>
     <td><%= todo_item.completed %></td>
