--- a/Experiments/Ruby/rails-projects/todo-app/app/views/todo_lists/edit.html.erb
+++ b/Experiments/Ruby/rails-projects/todo-app/app/views/todo_lists/edit.html.erb
@@ -4,7 +4,6 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this todo list", @todo_list %> |
-  <%= link_to "Back to todo lists", todo_lists_path %>
+<div class="buttons-container">
+  <%= link_to "Show this list", @todo_list %>
 </div>
