--- a/Experiments/Ruby/rails-projects/todo-app/app/views/todo_lists/new.html.erb
+++ b/Experiments/Ruby/rails-projects/todo-app/app/views/todo_lists/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New todo list</h1>
+<h1>New list</h1>
 
 <%= render "form", todo_list: @todo_list %>
-
-<%= link_to "Back to lists", todo_lists_path, class: "link-button" %>
